config/network-policy/allow-metrics-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-metrics-traffic
  labels:
    app.kubernetes.io/name: augmented-networkpolicy-operator
    app.kubernetes.io/managed-by: kustomize
spec:
  podSelector:
    matchLabels:
      control-plane: controller-manager
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 8443
      protocol: TCP
